move vars from files to vars

--- a/vars/default.yml
+++ b/vars/default.yml
@@ -1,4 +1,4 @@
 ---
-repo_name: AnyDesk Fedora - stable
-repo_baseurl: http://rpm.anydesk.com/centos/$releasever/$basearch/
-repo_gpgkey: https://keys.anydesk.com/repos/RPM-GPG-KEY
+# repo_name: AnyDesk Fedora - stable
+# repo_baseurl: http://rpm.anydesk.com/centos/$releasever/$basearch/
+# repo_gpgkey: https://keys.anydesk.com/repos/RPM-GPG-KEY
